<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="empty" translatable="false" />
    <string name="not_specified">Not specified</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_create">Create</string>
    <string name="permission_accounts_warning">If you want to login, you must enable permission to access accounts.</string>
    <string name="permission_camera_warning">If you want to use camera, you must enable permission so that we can access it.</string>
    <string name="permission_storage_warning">If you want to load file from storage, you must enable permission so that we can access it.</string>
    <string name="manifest_action_notification">Notifications</string>
    <string name="manifest_title_device_add">Add device</string>
    <string name="manifest_title_device_detail">Device detail</string>
    <string name="manifest_title_device_edit">Edit device</string>
    <string name="manifest_title_gate_add">Add gateway</string>
    <string name="manifest_title_gate_add_user">Add user</string>
    <string name="manifest_title_gate_detail">Gateway details</string>
    <string name="manifest_title_gate_edit">Edit gateway</string>
    <string name="manifest_title_main">BeeeOn</string>
    <string name="manifest_title_settings">Settings</string>
    <string name="manifest_title_widget_clock">BeeeOn-Time</string>
    <string name="manifest_title_widget_location_list">BeeeOn location</string>
    <string name="manifest_title_widget_module_small">BeeeOn module small</string>
    <string name="manifest_title_widget_module_large">BeeeOn module large</string>
    <string name="manifest_title_widget_module_medium">BeeeOn module medium</string>
    <string name="demo_network_demo_mode">DEMO MODE</string>
    <string name="demo_network_demo_mode_email" translatable="false">demo@beeeon.org</string>
    <string name="network_server_sufix_default"> (default)</string>
    <string name="base_application_progress_saving_data">Saving data&#8230;</string>
    <string name="util_timezone_actual_timezone">Current timezone</string>
    <string name="util_timezone_gate_timezone">Gateway timezone</string>
    <string name="utils_toast_field_must_be_email">Enter a valid e-mail address</string>
    <string name="utils_toast_field_must_be_number">Enter a valid number</string>
    <string name="utils_toast_field_must_be_ip_address">Enter a valid IP address. It should look like 192.168.100.100.</string>
    <string name="adapter_location_array_new_location_spinner">New location</string>
    <plurals name="refresh_interval_interval_seconds">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="refresh_interval_interval_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="refresh_interval_interval_hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="user_role_admin">Admin</string>
    <string name="user_role_guest">Guest</string>
    <string name="user_role_owner">Owner</string>
    <string name="user_role_user">User</string>
    <string name="main_action_gate_add">Add gateway</string>
    <string name="main_btn_add">Add</string>
    <string name="main_dialog_title_action_add">What to add?</string>
    <string name="main_toast_tap_again_exit">Tap back again to exit</string>
    <string name="main_tut_open_menu">Open Menu</string>
    <string name="main_tut_open_menu_text">For switch location tap to Icon and Menu will rise</string>
    <string name="notification_device_low_battery_low_signal_name_new_module">New module added</string>
    <string name="notification_gate_added_name_new_gate">New gateway added</string>
    <string name="notification_no_notifications_cap">NO NOTIFICATIONS</string>
    <string name="notification_title_notification">Notification</string>
    <string name="notification_uri_name_link">Link</string>
    <string name="activity_configuration_toast_something_wrong">Something went wrong, try again later</string>
    <string name="activity_fragment_btn_cancel">Cancel</string>
    <string name="activity_fragment_btn_set">Set</string>
    <string name="activity_fragment_menu_btn_remove">Remove</string>
    <string name="activity_fragment_menu_dialog_title_remove">Remove \"%1$s\"</string>
    <string name="activity_fragment_toast_delete_fail">Unable to remove</string>
    <string name="activity_fragment_toast_delete_success">Successfully removed</string>
    <string name="activity_gate_user_setup_device_btn_save">Save</string>
    <string name="activity_menu_dialog_message_remove_gate">You will lost access to the gateway and its devices.\n\nIf you are the owner, whole gateway will be removed from the server and all settings including users, devices and historical data will be lost.</string>
    <string name="activity_menu_dialog_title_remove_gate_default">Remove gateway</string>
    <string name="activity_module_edit_setup_device_toast_location_icon">Choose icon of your new location</string>
    <string name="activity_toast_success_save_data">Data saved successfully</string>
    <string name="activity_utils_toast_field_must_be_filled">Must be filled</string>
    <string name="fragment_configuration_widget_dialog_btn_ok">OK</string>
    <string name="fragment_module_detail_custom_view_chart_legend">Legend</string>
    <string name="layout_gate_edit">Edit gateway</string>
    <string name="layout_device_list_refresh_list">Refresh list</string>
    <string name="layout_widget_household">Household</string>
    <string name="toolbar_refresh_title">Refresh</string>
    <string name="toast_not_implemented">Not implemented yet</string>
    <string name="layout_activity_fragment_widget_placeholder_icon">Icon</string>
    <string name="layout_widget_placeholder_none">Loading</string>
    <string name="persistence_widget_placeholder_not_exists">NOT EXISTS</string>
    <string name="login_app_name">BeeeOn</string>
    <string name="login_app_slogan">Home under your control.</string>
    <string name="login_btn_demo_mode">Try the demo mode</string>
    <string name="login_btn_direct_connect">Direct connect to gateway</string>
    <string name="login_dialog_message_register_new_account">You don\'t have a BeeeOn account yet, do you want to create it now?</string>
    <string name="login_dialog_title_choose_provider">Choose login provider</string>
    <string name="login_dialog_title_register_new_account">No account</string>
    <string name="login_image_description_logo">Application logo</string>
    <string name="login_label_login">Login with:</string>
    <string name="login_label_server">Available servers</string>
    <string name="login_label_work_offline">Or you can work offline:</string>
    <string name="login_menu_action_choose_server_manually">Choose BeeeOn server manually</string>
    <string name="login_progress_loading_demo">Loading demo data&#8230;</string>
    <string name="login_progress_loading_gate">Loading gateway data&#8230;</string>
    <string name="login_progress_loading_gates">Loading your gateways&#8230;</string>
    <string name="login_progress_signing">Logging in&#8230;</string>
    <string name="login_progress_signup">Registering new user&#8230;</string>
    <string name="login_provider_choose_other">Use other service</string>
    <string name="login_provider_google">Google</string>
    <string name="login_provider_facebook">Facebook</string>
    <string name="login_toast_auth_provider_error">Error during authorization process</string>
    <string name="login_toast_error_not_supported_yet">This feature is not supported yet.</string>
    <string name="login_toast_internet_connection">Turn internet connection on</string>
    <string name="login_toast_login_failed">Login failed</string>
    <string name="login_toast_registration_failed">Registration failed</string>
    <string name="login_toast_ssl_error">SSL certificate error</string>
    <string name="nav_drawer_menu_action_about">About</string>
    <string name="nav_drawer_menu_action_logout">Logout</string>
    <string name="nav_drawer_menu_action_settings">Settings</string>
    <string name="nav_drawer_menu_drawer_close">CLOSE</string>
    <string name="nav_drawer_menu_drawer_open">OPEN</string>
    <string name="nav_drawer_menu_gate">Gateways</string>
    <string name="nav_drawer_menu_gate_menu_gate_detail">Details</string>
    <string name="nav_drawer_menu_menu_devices">Devices</string>
    <string name="nav_drawer_menu_menu_gate">Gateway</string>
    <string name="nav_drawer_menu_menu_household">Overview</string>
    <string name="nav_drawer_menu_menu_automation">Automation</string>
    <string name="nav_drawer_menu_no_gates">You have no gateways</string>
    <string name="nav_drawer_menu_action_gate_add">Add gateway</string>
    <string name="nav_drawer_profile_active_gate">Active gateway</string>
    <string name="gate_menu_layout_menu_del">Remove gateway</string>
    <string name="gate_menu_layout_menu_users">Manage users</string>
    <string name="gate_menu_user_menu_edit">Edit user</string>
    <string name="gate_menu_user_menu_del">Remove user</string>
    <string name="gate_add_btn_add">ADD</string>
    <string name="gate_add_btn_qr"> Scan QR code </string>
    <string name="gate_add_btn_qr_loading">Loading…</string>
    <string name="gate_add_dialog_title_enter_text">Enter the code of the gate</string>
    <string name="gate_user_add_add_user_gate">Add user</string>
    <string name="gate_user_add_add_user_email_header">E-mail</string>
    <string name="gate_user_add_add_user_role_header">Role</string>
    <string name="module_list_no_device_cap">NO DEVICE</string>
    <string name="module_list_no_gate_cap">NO GATEWAY</string>
    <string name="graph_settings_type_of_data">Type of data</string>
    <string name="graph_settings_data_granularity">Refresh frequency of data</string>
    <string name="widget_clock_location_module_widget" translatable="false">Widget</string>
    <string name="widget_clock_location_module_widget_gate">Gateway</string>
    <string name="widget_clock_location_module_widget_interval_update">Widget update interval</string>
    <string name="widget_clock_module_widget_module">Device to be shown</string>
    <string name="widget_location_list_update_over_wifi_only">Update over Wi-Fi only</string>
    <string name="button_done">DONE</string>
    <string name="data_type_min">Minimum</string>
    <string name="data_type_avg">Average</string>
    <string name="data_type_max">Maximum</string>
    <string name="dashboard_add_graph_name_hint">Card name</string>
    <string name="dashboard_add_graph_week_data_type_label">Select graph data type</string>
    <string name="dashboard_add_item_additional_settings">Additional settings</string>
    <string name="automation_add_rule_sensors">Sensors</string>
    <string name="automation_add_rule_sensors_tap">Tap to select module</string>
    <string name="automation_add_rule_sensors_inside_temperature">Inside temperature</string>
    <string name="automation_add_rule_sensors_outside_temperature">Outside temperature</string>
    <string name="automation_add_rule_sensors_humidity_sensor">Humidity sensor</string>
    <string name="automation_add_rule_preferences">Preferences</string>
    <string name="automation_add_rule_preferences_notifications">send notification </string>
    <string name="automation_add_rule_more_options">More options</string>
    <string name="automation_add_rule_ventilation_more_heat_transfer">Heat transfer coefficient UG - W/(m^2K)</string>
    <string name="automation_add_rule_ventilation_more_frame_factor">Factor UF of the frame - W/(m^2K)</string>
</resources>