<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="8dp"
	android:paddingRight="8dp"
	>

	<!-- ********* HOUSEHOLD SETTINGS ******** -->

	<TextView
		android:id="@+id/widget_config_gateway_label"
		android:text="@string/layout_widget_household"
		style="@style/LinearRow.Caption"
		/>

	<TextView
		style="@style/LinearRow.Item"
		android:text="@string/widget_clock_location_module_widget_gate"
		/>

	<Spinner
		android:id="@+id/widget_config_gateway_spinner"
		style="@style/BeeeOn.Spinner"
		android:layout_marginLeft="8dp"
		android:layout_marginStart="8dp"
		/>

	<!-- gate emptyview-->
	<TextView
		android:id="@+id/widget_config_gateway_emptyview"
		style="@style/LinearRow.Row"
		android:text="@string/module_list_no_gate_cap"
		android:textColor="@color/beeeon_secondary_text"
		/>

	<!-- separator -->
	<View
		style="@style/BeeeOn.Divider.Full"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		/>

	<TextView
		style="@style/LinearRow.Item"
		android:text="@string/widget_clock_module_widget_module"
		/>

	<Spinner
		android:id="@+id/widget_config_device"
		style="@style/BeeeOn.Spinner"
		android:layout_marginLeft="8dp"
		android:layout_marginStart="8dp"
		/>

	<!-- module emptyview-->
	<TextView
		android:id="@+id/widget_config_device_emptyview"
		style="@style/LinearRow.Row"
		android:text="@string/module_list_no_device_cap"
		android:textColor="@color/beeeon_secondary_text"
		/>

	<!-- separator -->
	<View
		style="@style/BeeeOn.Divider.Full"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		/>

	<!-- ********* WIDGET SETTINGS ******** -->

	<TextView
		android:id="@+id/widget_config_widget_label"
		android:text="@string/widget_clock_location_module_widget"
		style="@style/LinearRow.Caption"
		/>

	<TextView
		android:text="@string/widget_clock_location_module_widget_interval_update"
		style="@style/LinearRow.Item"
		/>

	<TextView
		android:id="@+id/widget_config_interval_text"
		style="@style/LinearRow.Row"
		/>

	<SeekBar
		android:id="@+id/widget_config_interval"
		style="@style/LinearRow.Row"
		android:layout_height="wrap_content"
		/>

	<!-- separator -->
	<View
		style="@style/BeeeOn.Divider.Full"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		/>

	<RelativeLayout
		android:id="@+id/widget_config_wifi_wrapper_layout"
		android:clickable="true"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginRight="16dp"
		android:layout_marginEnd="16dp"
		>

		<CheckBox
			android:id="@+id/widget_config_only_wifi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			/>

		<TextView
			style="@style/LinearRow.Item.OneLine"
			android:text="@string/widget_location_list_update_over_wifi_only"
			android:layout_alignParentStart="true"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/widget_config_only_wifi"
			android:layout_toStartOf="@id/widget_config_only_wifi"
			/>
	</RelativeLayout>

	<!-- separator -->
	<View
		style="@style/BeeeOn.Divider.Full"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		/>

</LinearLayout>