<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:fab="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.rehivetech.beeeon.gui.fragment.DevicesListFragment">


	<android.support.v7.widget.RecyclerView
		android:id="@+id/devices_list_recyclerview"
		android:scrollbars="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="88dp"
		android:clipToPadding="false"
		tools:listitem="@layout/item_list_device"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical"
		>

		<TextView
			android:id="@+id/devices_list_no_items_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/module_list_no_device_cap"
			android:textAppearance="@style/TextAppearance.AppCompat.Headline"
			android:textColor="@color/gray_dark"
			android:visibility="gone"
			/>

		<Button
			android:id="@+id/devices_list_refresh_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/layout_device_list_refresh_list"
			android:visibility="gone"
			/>
	</LinearLayout>

	<com.rehivetech.beeeon.gui.view.FloatingActionMenu
		android:id="@+id/devices_list_fab"
		style="@style/BeeeOn.FloatingActionMenu"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		>

		<com.rehivetech.beeeon.gui.view.FloatingActionButton
			android:id="@+id/devices_list_action_add_device"
			style="@style/BeeeOn.FloatingActionButton.MenuButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_add_white_24dp"
			fab:fab_label="@string/manifest_title_device_add"
			/>

		<com.rehivetech.beeeon.gui.view.FloatingActionButton
			android:id="@+id/devices_list_action_add_gate"
			style="@style/BeeeOn.FloatingActionButton.MenuButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_add_white_24dp"
			fab:fab_label="@string/main_action_gate_add"
			/>

	</com.rehivetech.beeeon.gui.view.FloatingActionMenu>


</RelativeLayout>
