<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_add_automation_dewing_sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automation_add_rule_sensors"
        style="@style/BeeeOn.Automation.AddItem.SectionHeader"
        />

    <ImageView
        android:id="@+id/fragment_add_automation_dewing_inside_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_sensors"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Image.Temperature"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_inside_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_add_automation_dewing_inside_iv"
        android:layout_toRightOf="@+id/fragment_add_automation_dewing_inside_iv"
        android:layout_toEndOf="@+id/fragment_add_automation_dewing_inside_iv"
        android:text="@string/automation_add_rule_sensors_inside_temperature"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Caption"
        />


    <TextView
        android:id="@+id/fragment_add_automation_dewing_inside_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_inside_tv"
        android:layout_toRightOf="@id/fragment_add_automation_dewing_inside_iv"
        android:text="@string/automation_add_rule_sensors_tap"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Text"
        />


    <ImageView
        android:id="@+id/fragment_add_automation_dewing_outside_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_inside_iv"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Image.Temperature"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_outside_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_add_automation_dewing_outside_iv"
        android:layout_toRightOf="@+id/fragment_add_automation_dewing_outside_iv"
        android:layout_toEndOf="@+id/fragment_add_automation_dewing_outside_iv"
        android:text="@string/automation_add_rule_sensors_outside_temperature"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Caption"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_outside_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_outside_tv"
        android:layout_toRightOf="@id/fragment_add_automation_dewing_outside_iv"
        android:text="@string/automation_add_rule_sensors_tap"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Text"
        />

    <ImageView
        android:id="@+id/fragment_add_automation_dewing_humidity_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_outside_iv"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Image.Humidity"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_humidity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fragment_add_automation_dewing_humidity_iv"
        android:layout_toRightOf="@+id/fragment_add_automation_dewing_humidity_iv"
        android:layout_toEndOf="@+id/fragment_add_automation_dewing_humidity_iv"
        android:text="@string/automation_add_rule_sensors_humidity_sensor"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Caption"
        />


    <TextView
        android:id="@+id/fragment_add_automation_dewing_humidity_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_humidity_tv"
        android:layout_toRightOf="@id/fragment_add_automation_dewing_humidity_iv"
        android:text="@string/automation_add_rule_sensors_tap"
        style="@style/BeeeOn.Automation.AddItem.Sensor.Text"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_add_automation_dewing_humidity_iv"
        android:text="@string/automation_add_rule_preferences"
        style="@style/BeeeOn.Automation.AddItem.SectionHeader"
        />

    <CheckBox
        android:id="@+id/fragment_add_automation_dewing_preferences_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_preferences"
        android:text="@string/automation_add_rule_preferences_notifications"
        style="@style/BeeeOn.Automation.AddItem.AdditionalOptions.Caption"
        />

    <Spinner
        android:id="@+id/fragment_add_automation_dewing_preferences_notifications_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_add_automation_dewing_preferences_notifications"
        android:layout_alignTop="@id/fragment_add_automation_dewing_preferences_notifications"
        android:layout_toRightOf="@id/fragment_add_automation_dewing_preferences_notifications"
        />


    <TextView
        android:id="@+id/fragment_add_automation_dewing_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_add_automation_dewing_preferences_notifications"
        android:text="@string/automation_add_rule_more_options"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        style="@style/BeeeOn.Automation.AddItem.SectionHeader"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_more_tv_coefficient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_more"
        android:text="@string/automation_add_rule_ventilation_more_heat_transfer"
        style="@style/BeeeOn.Automation.AddItem.AdditionalOptions.Caption"
        />

    <EditText
        android:id="@+id/fragment_add_automation_dewing_more_et_coefficient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_add_automation_dewing_more_tv_coefficient"
        style="@style/BeeeOn.Automation.AddItem.AdditionalOptions.Edit"
        />

    <TextView
        android:id="@+id/fragment_add_automation_dewing_more_tv_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_add_automation_dewing_more_et_coefficient"
        android:text="@string/automation_add_rule_ventilation_more_frame_factor"
        style="@style/BeeeOn.Automation.AddItem.AdditionalOptions.Caption"
        />

    <EditText
        android:id="@+id/fragment_add_automation_dewing_more_et_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_add_automation_dewing_more_tv_factor"
        style="@style/BeeeOn.Automation.AddItem.AdditionalOptions.Edit"
        />


</RelativeLayout>